Fix display
The display seemed too big for the calculator itself. I have attempted
to scale it down.

--- a/css/style.css
+++ b/css/style.css
@@ -84,9 +84,9 @@
 }
 
 .display-container {
-  gap: 1rem;
+  gap: 0.25rem;
   grid-column: 1 / 5;
-  min-height: 8.125rem;
+  min-height: 6.5rem;
   margin: 2rem 0 1rem;
   padding: 0.5rem 0.5rem 0;
   background-color: hsl(163, 20%, 80%);
@@ -98,14 +98,12 @@
   margin: 0;
   height: 1rem;
   font-family: 'Bungee', monospace;
-  font-size: 1.2rem;
   color: hsl(0, 0%, 0%);
 }
 
 .display.number {
-  min-height: 4.5rem;
   font-family: 'Share Tech Mono', monospace;
-  font-size: 4rem;
+  font-size: 3rem;
   overflow-x: auto;
 }
 
